# skills-sync

./: .gitignore  Cargo.toml  README.md  dev.bat  prod.bat
.github/workflows/: build.yaml
src/: main.rs
src/sync/: cli.rs  client.rs
