[package]
name = "skills-sync"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
zip = "2"
comfy-table = "7"
regex = "1"
serde_yaml = "0.9"
